--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -2497,6 +2497,19 @@
   timestamp = {2021.12.15},
 }
 
+@Article{Axelrod1997,
+  author    = {Axelrod, R.},
+  title     = {The Dissemination of Culture: A Model with Local Convergence and Global Polarization},
+  journal   = {Journal of Conflict Resolution},
+  year      = {1997},
+  volume    = {41},
+  number    = {2},
+  pages     = {203-226},
+  owner     = {Vincent},
+  timestamp = {2023.08.11},
+  url       = {https://www.jstor.org/stable/174371},
+}
+
 @Book{Axtell1996,
   title     = {Growing Artificial Societies},
   publisher = {The Brookings Institution},
@@ -3545,6 +3558,19 @@
   doi       = {10.1109/mc.2013.75},
   owner     = {Vincent},
   timestamp = {2019.03.30},
+}
+
+@Article{Bascom1965,
+  author    = {Bascom, W.},
+  title     = {The Forms of Folklore: Prose Narratives},
+  journal   = {Journal of American Folklore},
+  year      = {1965},
+  volume    = {78},
+  number    = {307},
+  pages     = {3-20},
+  doi       = {10.2307/538099},
+  owner     = {Vincent},
+  timestamp = {2023.08.11},
 }
 
 @Article{Bashan2012,
@@ -6098,6 +6124,19 @@
   owner     = {Vincent},
   publisher = {Frontiers Media {SA}},
   timestamp = {2017.12.06},
+}
+
+@Article{Borowska-Szerszun2019,
+  author    = {Borowska-Szerszun, S.},
+  title     = {Representation of Rape in George R. R. Martin's A Song of Ice and Fire and Robin Hobb's Liveship Traders},
+  journal   = {Extrapolation},
+  year      = {2019},
+  volume    = {60},
+  number    = {1},
+  pages     = {1-23},
+  doi       = {10.3828/extr.2019.2},
+  owner     = {Vincent},
+  timestamp = {2023.08.11},
 }
 
 @InProceedings{Borrega2007,
@@ -16892,6 +16931,17 @@
   timestamp = {2020.07.25},
 }
 
+@InProceedings{Fonseca2021,
+  author    = {Fonseca, B. P. and Albuquerque, P. C. and Zicker, F. and Morel, C. M.},
+  title     = {Social network analysis and mining: challenges and applications},
+  booktitle = {X Brazilian Workshop on Social Network Analysis and Mining},
+  year      = {2021},
+  pages     = {287-294},
+  doi       = {10.5753/brasnam.2021.16149},
+  owner     = {Vincent},
+  timestamp = {2023.08.11},
+}
+
 @Article{FonsecadosReis2020,
   author    = {Fonseca dos Reis, E. and Li, A. and Masuda, N.},
   title     = {Generative models of simultaneously heavy-tailed distributions of interevent times on nodes and edges},
@@ -17189,6 +17239,19 @@
   url          = {http://www.helsinki.fi/varieng/CoRD/corpora/BROWN/index.html},
   owner        = {Vincent},
   timestamp    = {2019.03.22},
+}
+
+@Article{Frank2007,
+  author    = {Frank, R.},
+  title     = {A Scandal in Toronto: ``The Dating of ``Beowulf'' '' a Quarter Century On},
+  journal   = {Speculum},
+  year      = {2007},
+  volume    = {82},
+  number    = {4},
+  pages     = {843-864},
+  owner     = {Vincent},
+  timestamp = {2023.08.11},
+  url       = {https://www.jstor.org/stable/20466079},
 }
 
 @Article{Franzosi1987,
@@ -27233,6 +27296,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/books?id=L8Q9pYmQdVsC},
 }
 
+@Article{Knappett2008,
+  author    = {Knappett, C. and Evans, T. and Rivers, R.},
+  title     = {Modelling maritime interaction in the Aegean Bronze Age},
+  journal   = {Antiquity},
+  year      = {2008},
+  volume    = {82},
+  number    = {318},
+  pages     = {1009-1024},
+  doi       = {10.1017/s0003598x0009774x},
+  owner     = {Vincent},
+  timestamp = {2023.08.11},
+}
+
 @Book{Knoke1982,
   title     = {Network Analysis},
   publisher = {Sage},
@@ -37152,6 +37228,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://aclanthology.org/W17-7011.pdf},
 }
 
+@Article{Muhongo2022,
+  author    = {Muhongo, T. and Brazdil, P. and Silva, F.},
+  title     = {Detection of Loanwords in Angolan Portuguese: A Text Mining Approach},
+  journal   = {Inteligencia Artificial},
+  year      = {2022},
+  volume    = {25},
+  number    = {69},
+  pages     = {87-106},
+  doi       = {10.4114/intartif.vol25iss69pp87-106},
+  owner     = {Vincent},
+  timestamp = {2023.08.11},
+}
+
 @InProceedings{Muhuri2016,
   author    = {Muhuri, S. and Chakraborty, S. and Setua, S. K.},
   title     = {An Edge Contribution-Based Approach to Identify Influential Nodes from Online Social Networks},
@@ -38599,6 +38688,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/ICETIETR.2018.8529125},
   owner     = {Vincent},
   timestamp = {2018.12.12},
+}
+
+@Book{Nilsson1932,
+  title     = {The Mycenaean Origin of Greek Mythology},
+  publisher = {University of California Press},
+  year      = {1932},
+  author    = {Nilsson, M. P.},
+  owner     = {Vincent},
+  timestamp = {2023.08.11},
+  url       = {https://sacred-texts.com/cla/mog/index.htm},
 }
 
 @Article{NiMhaonaigh1992,
@@ -41774,6 +41873,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1142/S0219525916500053},
   owner     = {Vincent},
   timestamp = {2016.03.01},
+}
+
+@Article{Prado2020,
+  author    = {Prado, S. D. and Dahmen, S. R. and Bazzan, A. L. C. and MacCarron, M. and Hillner, J.},
+  title     = {Gendered Networks and Communicability in Medieval Historical Narratives},
+  journal   = {Advances in Complex Systems},
+  year      = {2020},
+  volume    = {23},
+  number    = {03},
+  pages     = {2050006},
+  doi       = {10.1142/s021952592050006x},
+  owner     = {Vincent},
+  timestamp = {2023.08.11},
 }
 
 @InProceedings{Prasad2006,
@@ -46716,6 +46828,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.10},
 }
 
+@InProceedings{Scofield2022,
+  author    = {Scofield, C. and Silva, M. O. and de Melo-Gomes, L. and Moro, M. M.},
+  title     = {Book Genre Classification Based on Reviews of Portuguese-Language Literature},
+  booktitle = {International Conference on Computational Processing of the Portuguese Language},
+  year      = {2022},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {188-197},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-030-98305-5_18},
+  owner     = {Vincent},
+  timestamp = {2023.08.11},
+}
+
 @Article{Scott1988,
   author    = {Scott, J.},
   title     = {Social Network Analysis},
@@ -47731,6 +47856,30 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/asonam.2016.7752420},
   owner     = {Vincent},
   timestamp = {2022.07.09},
+}
+
+@InProceedings{Silva2021,
+  author    = {Silva, M. O. and Scofield, C. and Oliveira, G. P. and Seufitelli, D. B. and Moro, M. M.},
+  title     = {Exploring Brazilian Cultural Identity Through Reading Preferences},
+  booktitle = {X Brazilian Workshop on Social Network Analysis and Mining},
+  year      = {2021},
+  pages     = {115-126},
+  doi       = {10.5753/brasnam.2021.16130},
+  owner     = {Vincent},
+  timestamp = {2023.08.11},
+}
+
+@Article{Silva2022,
+  author    = {Silva, M. O. and Scofield, C. and De Melo-Gomes, L. and Moro, M. M.},
+  title     = {Cross-collection Dataset of Public Domain Portuguese-language Works},
+  journal   = {Journal of Information and Data Management},
+  year      = {2022},
+  volume    = {13},
+  number    = {1},
+  pages     = {95-110},
+  doi       = {10.5753/jidm.2022.2349},
+  owner     = {Vincent},
+  timestamp = {2023.08.11},
 }
 
 @InProceedings{Silva2023,
@@ -56082,6 +56231,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1093/llc/fqab082},
   owner     = {Vincent},
   timestamp = {2021.10.26},
+}
+
+@Article{Yang2022o,
+  author    = {Yang, F.},
+  title     = {An Extraction and Representation Pipeline for Literary Characters},
+  journal   = {AAAI Conference on Artificial Intelligence},
+  year      = {2022},
+  volume    = {36},
+  number    = {11},
+  pages     = {13146-13147},
+  doi       = {10.1609/aaai.v36i11.21709},
+  owner     = {Vincent},
+  timestamp = {2023.08.11},
 }
 
 @Article{Yao2019,
