--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -5010,6 +5010,42 @@
   url       = {https://benjamins.com/catalog/scl.28},
 }
 
+@InCollection{Bick2014,
+  author    = {Bick, E.},
+  title     = {{PALAVRAS}, a constraint grammar-based parsing system for Portuguese},
+  booktitle = {Working with Portuguese Corpora},
+  publisher = {Bloomsburry Academic},
+  year      = {2014},
+  pages     = {279-302},
+  owner     = {Vincent},
+  timestamp = {2023.08.11},
+  url       = {https://portal.findresearcher.sdu.dk/en/publications/palavras-a-constraint-grammar-based-parsing-system-for-portuguese},
+}
+
+@InProceedings{Bick2014a,
+  author    = {Bick, E. and Didriksen, T.},
+  title     = {{CG-3} - Beyond classical constraint grammar},
+  booktitle = {Nordic Conference of Computational Linguistics},
+  year      = {2014},
+  pages     = {31-39},
+  owner     = {Vincent},
+  timestamp = {2023.08.11},
+  url       = {https://aclanthology.org/W15-1807},
+}
+
+@Article{Bick2022,
+  author    = {Bick, E.},
+  title     = {{PFN}-{PT} - A Framenet annotator for Portuguese},
+  journal   = {Domínios de Lingu@gem},
+  year      = {2022},
+  volume    = {16},
+  number    = {4},
+  pages     = {1401-1435},
+  doi       = {10.14393/dl52-v16n4a2022-7},
+  owner     = {Vincent},
+  timestamp = {2023.08.11},
+}
+
 @Article{Bick2023,
   author    = {Bick, E.},
   title     = {Extraction of Literary Character Information in Portuguese},
@@ -5021,6 +5057,16 @@
   doi       = {10.21814/lm.15.1.397},
   owner     = {Vincent},
   timestamp = {2023.07.03},
+}
+
+@InProceedings{Bick2023a,
+  author    = {Bick, E.},
+  title     = {Attribution of quoted speech in {Portuguese} text},
+  booktitle = {Contraint Grammar: Methods, Tools and Applications},
+  year      = {2023},
+  owner     = {Vincent},
+  timestamp = {2023.08.11},
+  url       = {https://portal.findresearcher.sdu.dk/en/publications/attribution-of-quoted-speech-in-portuguese-text},
 }
 
 @Article{Bickart2012,
@@ -9176,9 +9222,9 @@
   booktitle = {31st AAAI Conference on Artificial Intelligence},
   year      = {2017},
   pages     = {3159-3165},
+  doi       = {10.1609/aaai.v31i1.10982},
   owner     = {Vincent},
   timestamp = {2018.02.15},
-  url       = {https://www.aaai.org/ocs/index.php/AAAI/AAAI17/paper/viewPaper/14564},
 }
 
 @InProceedings{Chaturvedi2018,
@@ -14346,6 +14392,16 @@
   doi       = {10.1109/nsw.2013.6609190},
   owner     = {Vincent},
   timestamp = {2021.02.04},
+}
+
+@InProceedings{Durandard2023,
+  author    = {Durandard, N. and Tan, V.-A. and Michel, G. and Epure, E. V.},
+  title     = {Automatic Annotation of Direct Speech in Written French Narratives},
+  booktitle = {61st Annual Meeting of the Association for Computational Linguistics},
+  year      = {2023},
+  owner     = {Vincent},
+  timestamp = {2023.06.29},
+  url       = {https://www.researchgate.net/publication/371909439_Automatic_Annotation_of_Direct_Speech_in_Written_French_Narratives},
 }
 
 @Book{Durkheim1982,
@@ -40500,6 +40556,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2021.06.24},
   url       = {https://www.managementissues.com/index.php/specials/75-specials/988-secrets-and-danger-interracial-sexuality-in-louis-couperus-s-the-hidden-force-and-dutch-colonialism},
+}
+
+@InProceedings{Paul2017a,
+  author    = {Paul, A. and Das, D.},
+  title     = {A Deep Dive into Identification of Characters from Mahabharata},
+  booktitle = {14th International Conference on Natural Language Processing},
+  year      = {2017},
+  pages     = {447-455},
+  owner     = {Vincent},
+  timestamp = {2023.08.11},
+  url       = {https://aclanthology.org/W17-7555/},
 }
 
 @InProceedings{Paulus2017,
