--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -3098,12 +3098,12 @@
 @InProceedings{Bamman2014,
   author    = {Bamman, D. and O'Connor, B. and Smith, N. A.},
   title     = {Learning latent personas of film characters},
-  booktitle = {Annual Meeting of the Association for Computational Linguistics},
+  booktitle = {51st Annual Meeting of the Association for Computational Linguistics},
   year      = {2014},
   pages     = {352-361},
   owner     = {Vincent},
   timestamp = {2017.12.07},
-  url       = {http://www.anthology.aclweb.org/P/P13/P13-1035.pdf},
+  url       = {https://aclanthology.org/P13-1035/},
 }
 
 @InProceedings{Bamman2014a,
@@ -3557,9 +3557,9 @@
   booktitle = {61st Annual Meeting of the Association for Computational Linguistics},
   year      = {2023},
   pages     = {10300-10313},
+  doi       = {10.18653/v1/2023.findings-acl.654},
   owner     = {Vincent},
   timestamp = {2023.07.11},
-  url       = {https://aclanthology.org/2023.findings-acl.654/},
 }
 
 @InProceedings{Barzilay2005,
@@ -6402,6 +6402,17 @@
   timestamp = {2018.06.11},
 }
 
+@InProceedings{Bost2020,
+  author    = {Bost, X. and Labatut, V. and Linarès, G.},
+  title     = {Serial Speakers: a Dataset of TV Series},
+  booktitle = {12th Language Resources and Evaluation Conference},
+  year      = {2020},
+  pages     = {4249-4257},
+  owner     = {Vincent},
+  timestamp = {2020.02.11},
+  url       = {https://www.aclweb.org/anthology/2020.lrec-1.525/},
+}
+
 @Article{Bostock2011,
   author    = {Bostock, M. and Ogievetsky, V. and Heer, J.},
   title     = {D3 Data-Driven Documents},
@@ -7298,6 +7309,28 @@
   owner     = {Vincent},
   timestamp = {2019.04.05},
   url       = {https://archive.org/details/reliquesofirishp02broo},
+}
+
+@InProceedings{Brooke2015,
+  author    = {Brooke, J. and Hammond, A. and Hirst, G.},
+  title     = {{GutenTag}: an {NLP}-driven Tool for Digital Humanities Research in the Project Gutenberg Corpus},
+  booktitle = {4th Workshop on Computational Linguistics for Literature},
+  year      = {2015},
+  pages     = {42-47},
+  doi       = {10.3115/v1/w15-0705},
+  owner     = {Vincent},
+  timestamp = {2023.08.12},
+}
+
+@InProceedings{Brooke2016,
+  author    = {Brooke, J. and Hammond, A. and Baldwin, T.},
+  title     = {Bootstrapped Text-level Named Entity Recognition for Literature},
+  booktitle = {54th Annual Meeting of the Association for Computational Linguistics},
+  year      = {2016},
+  pages     = {344-350},
+  doi       = {10.18653/v1/p16-2056},
+  owner     = {Vincent},
+  timestamp = {2023.08.12},
 }
 
 @Article{Brown1961,
@@ -9074,7 +9107,7 @@
 @InProceedings{Chambers2008,
   author    = {Chambers, N. and Jurafsky, D.},
   title     = {Unsupervised learning of narrative event chains},
-  booktitle = {Annual Meeting of the Association for Computational Linguistics},
+  booktitle = {46th Annual Meeting of the Association for Computational Linguistics},
   year      = {2008},
   pages     = {789-797},
   owner     = {Vincent},
@@ -14596,9 +14629,10 @@
   title     = {Automatic Annotation of Direct Speech in Written French Narratives},
   booktitle = {61st Annual Meeting of the Association for Computational Linguistics},
   year      = {2023},
+  pages     = {7129-7147},
+  doi       = {10.18653/v1/2023.acl-long.393},
   owner     = {Vincent},
   timestamp = {2023.06.29},
-  url       = {https://www.researchgate.net/publication/371909439_Automatic_Annotation_of_Direct_Speech_in_Written_French_Narratives},
 }
 
 @Book{Durkheim1982,
@@ -14848,6 +14882,19 @@
   owner     = {Vincent},
   timestamp = {2019.03.11},
   url       = {https://www.degruyter.com/view/product/44088},
+}
+
+@Article{Eder2015,
+  author    = {Eder, M.},
+  title     = {Visualization in stylometry: Cluster analysis using networks},
+  journal   = {Digital Scholarship in the Humanities},
+  year      = {2015},
+  volume    = {32},
+  number    = {1},
+  pages     = {50-64},
+  doi       = {10.1093/llc/fqv061},
+  owner     = {Vincent},
+  timestamp = {2023.08.12},
 }
 
 @Article{Edmondson2017,
@@ -44235,6 +44282,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.03.15},
 }
 
+@InProceedings{Reiter2018a,
+  author    = {Reiter, N. and Krautter, B. and Pagel, J. and Willand, M.},
+  title     = {Detecting Protagonists in German Plays around 1800 as a Classification Task},
+  booktitle = {EADH Data in Digital Humanities},
+  year      = {2018},
+  owner     = {Vincent},
+  timestamp = {2023.08.12},
+  url       = {https://elib.uni-stuttgart.de/bitstream/11682/10179/1/article.pdf},
+}
+
 @Article{Reiter2022,
   author    = {Reiter, N. and Sieker, J. and Guhr, S. and Gius, E. and Zarrieß, S.},
   title     = {Exploring Text Recombination for Automatic Narrative Level Detection},
@@ -49925,14 +49982,15 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://psyarxiv.com/qpa2g/},
 }
 
-@Article{Soni2023,
+@InProceedings{Soni2023,
   author    = {Soni, S. and Sihra, A; and Evans, E. F. and Wilkens, M. and Bamman, D.},
   title     = {Grounding Characters and Places in Narrative Texts},
-  journal   = {61st Annual Meeting of the Association for Computational Linguistics},
+  booktitle = {61st Annual Meeting of the Association for Computational Linguistics},
   year      = {2023},
+  pages     = {11723-11736},
+  doi       = {10.18653/v1/2023.acl-long.655},
   owner     = {Vincent},
   timestamp = {2023.06.01},
-  url       = {https://arxiv.org/abs/2305.17561},
 }
 
 @Book{Sontag1966,
@@ -54551,6 +54609,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://arxiv.org/abs/2204.05836},
 }
 
+@InProceedings{Vishnubhotla2023,
+  author    = {Vishnubhotla, K. and Rudzicz, F. and Hirst, G. and Hammond, A.},
+  title     = {Improving Automatic Quotation Attribution in Literary Novels},
+  booktitle = {61st Annual Meeting of the Association for Computational Linguistics},
+  year      = {2023},
+  pages     = {737-746},
+  doi       = {10.18653/v1/2023.acl-short.64},
+  owner     = {Vincent},
+  timestamp = {2023.07.11},
+}
+
 @Article{Vishwanathan2010,
   author    = {Vishwanathan, S. V. N. and Schraudolph, N. N. and Kondor, R. and Borgwardt, K. M.},
   title     = {Graph Kernels},
@@ -58009,6 +58078,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.07.02},
 }
 
+@InProceedings{Yoder2021,
+  author    = {Yoder, M. and Khosla, S. and Shen, Q. and Naik, A. and Jin, H. and Muralidharan, H. and Rosé, C.},
+  title     = {{FanfictionNLP}: A Text Processing Pipeline for Fanfiction},
+  booktitle = {3rd Workshop on Narrative Understanding},
+  year      = {2021},
+  pages     = {13-23},
+  doi       = {10.18653/v1/2021.nuse-1.2},
+  owner     = {Vincent},
+  timestamp = {2023.08.12},
+}
+
 @Article{Yonelinas2019,
   author    = {Yonelinas, A. P. and Ranganath, C. and Ekstrom, A. D. and Wiltgen, B. J.},
   title     = {A contextual binding theory of episodic memory: systems consolidation reconsidered},
@@ -58175,15 +58255,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   title     = {Personality Understanding of Fictional Characters during Book Reading},
   booktitle = {61st Annual Meeting of the Association for Computational Linguistics},
   year      = {2023},
+  pages     = {14784-14802},
+  doi       = {10.18653/v1/2023.acl-long.826},
   owner     = {Vincent},
   timestamp = {2023.05.20},
-  url       = {https://arxiv.org/abs/2305.10156},
 }
 
 @Article{Yu2023c,
-  author    = {Yu, Melody},
+  author    = {Yu, M.},
   title     = {Decoding the Popularity of {TV} Series: A Network Analysis Perspective},
-  journal   = {arXiv:},
+  journal   = {arXiv},
   year      = {2023},
   volume    = {cs.SI},
   pages     = {2307.05329},
