--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -611,6 +611,16 @@
   timestamp = {2017.05.03},
 }
 
+@Book{Ahmed2014,
+  title     = {Willful Subjects},
+  publisher = {Duke University Press},
+  year      = {2014},
+  author    = {Ahmed, S.},
+  owner     = {Vincent},
+  timestamp = {2023.08.12},
+  url       = {https://www.dukeupress.edu/willful-subjects},
+}
+
 @InProceedings{Ahmed2015,
   author    = {Ahmed, M. and Jahangir, M. and Afzal, H. and Majeed, A. and Siddiqi, I.},
   title     = {Using Crowd-Source Based Features from Social Media and Conventional Features to Predict the Movies Popularity},
@@ -1427,6 +1437,19 @@
   url       = {http://cup.columbia.edu/book/a-theory-of-narrative/9780231144285},
 }
 
+@Article{Alworth2010,
+  author    = {Alworth, D. J.},
+  title     = {Supermarket Sociology},
+  journal   = {New Literary History},
+  year      = {2010},
+  volume    = {41},
+  number    = {2},
+  pages     = {301-327},
+  owner     = {Vincent},
+  timestamp = {2023.08.12},
+  url       = {https://www.jstor.org/stable/40983824},
+}
+
 @InProceedings{Amaldi2009,
   author    = {Amaldi, E. and Iuliano, C. and Jurkiewicz, T. and Mehlhorn, K. and Rizzi, R.},
   title     = {Breaking the O(m^2 n) Barrier for Minimum Cycle Bases},
@@ -1744,6 +1767,16 @@
   url          = {https://pudding.cool/2017/03/film-dialogue/index.html},
   owner        = {Vincent},
   timestamp    = {2018.11.11},
+}
+
+@Book{Anderson2019,
+  title     = {Character: Three Inquiries in Literary Studies},
+  publisher = {University of Chicago Press},
+  year      = {2019},
+  author    = {Anderson, A. and Felski, R. and Moi, T.},
+  owner     = {Vincent},
+  timestamp = {2023.08.12},
+  url       = {https://press.uchicago.edu/ucp/books/book/chicago/C/bo42935471.html},
 }
 
 @Book{Andersson1967,
@@ -7836,6 +7869,19 @@
   timestamp = {2019.04.05},
 }
 
+@Article{Burns1998,
+  author    = {Burns, T. R. and Engdahl, E.},
+  title     = {The social construction of consciousness. Part 1: collective consciousness and its socio-cultural foundations},
+  journal   = {Journal of Consciousness Studies},
+  year      = {1998},
+  volume    = {5},
+  number    = {1},
+  pages     = {67-85},
+  owner     = {Vincent},
+  timestamp = {2023.08.12},
+  url       = {https://www.ingentaconnect.com/content/imp/jcs/1998/00000005/00000001/817},
+}
+
 @InCollection{Burns2019,
   author    = {Burns, P. J.},
   title     = {Building a Text Analysis Pipeline for Classical Languages},
@@ -8625,6 +8671,17 @@
   doi       = {10.1109/cvpr.2017.502},
   owner     = {Vincent},
   timestamp = {2023.03.16},
+}
+
+@InProceedings{Carreras2005,
+  author    = {Carreras, X. and Màrquez, L.},
+  title     = {Introduction to the CoNLL-2005 Shared Task: Semantic Role Labeling},
+  booktitle = {9th Conference on Computational Natural Language Learning},
+  year      = {2005},
+  pages     = {152-164},
+  owner     = {Vincent},
+  timestamp = {2023.08.12},
+  url       = {https://aclanthology.org/W05-0620/},
 }
 
 @Book{Carrington2005,
@@ -10479,6 +10536,17 @@
   timestamp = {2023.01.09},
 }
 
+@InProceedings{Clark2016a,
+  author    = {Clark, K. and Manning, C. D.},
+  title     = {Deep Reinforcement Learning for Mention-Ranking Coreference Models},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2016},
+  pages     = {2256-2262},
+  doi       = {10.18653/v1/d16-1245},
+  owner     = {Vincent},
+  timestamp = {2023.08.12},
+}
+
 @InProceedings{Clark2018,
   author    = {Clark, E. and Spencer Ross, A. and Tan, C. and Ji, Y. and Smith, N. A.},
   title     = {Creative Writing with a Machine in the Loop},
@@ -10893,6 +10961,19 @@
   owner     = {Vincent},
   timestamp = {2019.04.12},
   url       = {https://dl.acm.org/citation.cfm?id=2078186},
+}
+
+@InProceedings{Collobert2011a,
+  author    = {Collobert, R.},
+  title     = {Deep Learning for Efficient Discriminative Parsing},
+  booktitle = {14th International Conference on Artificial Intelligence and Statistics},
+  year      = {2011},
+  volume    = {15},
+  series    = {Proceedings of Machine Learning Research},
+  pages     = {224-232},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+  url       = {https://proceedings.mlr.press/v15/collobert11a.html},
 }
 
 @Article{ColomerdeSimn2013,
@@ -13850,6 +13931,19 @@
   timestamp = {2019.04.06},
 }
 
+@Article{Dowty1991,
+  author    = {Dowty, D.},
+  title     = {Thematic Proto-Roles and Argument Selection},
+  journal   = {Language},
+  year      = {1991},
+  volume    = {67},
+  number    = {3},
+  pages     = {547},
+  doi       = {10.2307/415037},
+  owner     = {Vincent},
+  timestamp = {2023.08.12},
+}
+
 @Book{Doyle1984,
   title     = {Random walks and electric networks},
   publisher = {Mathematical Association of America},
@@ -15072,6 +15166,19 @@
   owner       = {Vincent},
   timestamp   = {2022.12.06},
   url         = {https://github.com/aehrm/LLpro},
+}
+
+@Article{Eichenbaum1963,
+  author    = {Eichenbaum, B. and Paul, B. and Nesbitt, M.},
+  title     = {The Structure of Gogol's ``The Overcoat''},
+  journal   = {Russian Review},
+  year      = {1963},
+  volume    = {22},
+  number    = {4},
+  pages     = {377},
+  doi       = {10.2307/126672},
+  owner     = {Vincent},
+  timestamp = {2023.08.12},
 }
 
 @Article{Eichenlaub2019,
@@ -16755,6 +16862,16 @@
   url       = {https://www.forgottenbooks.com/en/download/TheThirtySixDramaticSituations_10254814.pdf},
 }
 
+@Book{Figlerowicz2017,
+  title     = {Flat Protagonists: A Theory of Novel Character},
+  publisher = {Oxford University Press},
+  year      = {2017},
+  author    = {Figlerowicz, M.},
+  owner     = {Vincent},
+  timestamp = {2023.08.12},
+  url       = {https://global.oup.com/academic/product/flat-protagonists-9780190496760},
+}
+
 @Article{Figueroa-Caballero2019,
   author    = {Figueroa-Caballero, A. and Mastro, D. and Stamps, D.},
   title     = {An Examination of the Effects of Mediated Intragroup and Intergroup Interactions among Latino/a Characters},
@@ -17814,6 +17931,16 @@
   owner     = {Vincent},
   timestamp = {2022.06.22},
   url       = {https://psychclassics.yorku.ca/Freud/Dreams/dreams.pdf},
+}
+
+@Book{Freund1897,
+  title     = {The Legal Nature of Corporations},
+  publisher = {University of Chicago Press},
+  year      = {1897},
+  author    = {Freund, E.},
+  owner     = {Vincent},
+  timestamp = {2023.08.12},
+  url       = {http://pi.lib.uchicago.edu/1001/cat/bib/2458183},
 }
 
 @Article{Freund1997,
@@ -20549,6 +20676,16 @@
   owner     = {Vincent},
   timestamp = {2020.08.13},
   url       = {https://gallica.bnf.fr/ark:/12148/bpt6k3398326j.texteImage},
+}
+
+@Book{Greimas1982,
+  title     = {Semiotics and Language: An Analytical Dictionary},
+  publisher = {Indiana University Press},
+  year      = {1982},
+  author    = {Greimas, A. J. and Courtés, J.},
+  owner     = {Vincent},
+  timestamp = {2023.08.12},
+  url       = {https://books.google.fr/books?id=HYUUAQAAIAAJ},
 }
 
 @Book{Greimas1983,
@@ -24509,6 +24646,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.bookdepository.com/Theory-Adaptation-Linda-Hutcheon/9780415539388},
 }
 
+@Article{Hutchins1995,
+  author    = {Hutchins, E.},
+  title     = {How a Cockpit Remembers Its Speeds},
+  journal   = {Cognitive Science},
+  year      = {1995},
+  volume    = {19},
+  number    = {3},
+  pages     = {265-288},
+  doi       = {10.1207/s15516709cog1903_1},
+  owner     = {Vincent},
+  timestamp = {2023.08.12},
+}
+
 @InProceedings{Hutchinson2012,
   author    = {Hutchinson, S. and Datla, V. and Louwerse, M. M.},
   title     = {Social networks are encoded in language},
@@ -25804,6 +25954,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://wipfandstock.com/9781579102746/the-purpose-of-the-biblical-genealogies/},
 }
 
+@Article{Johnson2003,
+  author    = {Johnson, S. C.},
+  title     = {Detecting agents},
+  journal   = {Philosophical Transactions of the Royal Society of London: Series B},
+  year      = {2003},
+  volume    = {358},
+  number    = {1431},
+  pages     = {549-559},
+  doi       = {10.1098/rstb.2002.1237},
+  owner     = {Vincent},
+  timestamp = {2023.08.12},
+}
+
 @Book{Johnson2005,
   title     = {Univariate Discrete Distributions},
   publisher = {John Wiley \& Sons},
@@ -26252,6 +26415,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Jurafsky, D. and Martin, J. H.},
   owner     = {Vincent},
   timestamp = {2019.06.24},
+  url       = {https://web.stanford.edu/~jurafsky/slp3/},
+}
+
+@InCollection{Jurafsky2019,
+  author    = {Jurafsky, D. and Martin, J. H.},
+  title     = {Semantic Role Labeling},
+  booktitle = {Speech and Language Processing},
+  publisher = {Pearson},
+  year      = {2019},
+  owner     = {Vincent},
+  timestamp = {2023.08.12},
   url       = {https://web.stanford.edu/~jurafsky/slp3/},
 }
 
@@ -33542,6 +33716,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.cambridgescholars.com/product/978-1-4438-4156-6},
 }
 
+@Book{Lynch1998,
+  title     = {The Economy of Character: Novels, Market Culture, and the Business of Inner Meaning},
+  publisher = {University of Chicago Press},
+  year      = {1998},
+  author    = {Lynch, D. S.},
+  owner     = {Vincent},
+  timestamp = {2023.08.12},
+  url       = {https://press.uchicago.edu/ucp/books/book/chicago/E/bo3626227.html},
+}
+
 @Book{Lynch2007,
   title     = {Introduction to Applied Bayesian Statistics and Estimation for Social Scientists},
   publisher = {Springer},
@@ -34060,6 +34244,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/3173574.3174049},
   owner     = {Vincent},
   timestamp = {2022.06.29},
+}
+
+@Article{Maitland1905,
+  author    = {Maitland, F. W.},
+  title     = {Moral Personality and Legal Personality},
+  journal   = {Journal of the Society of Comparative Legislation},
+  year      = {1905},
+  volume    = {6},
+  number    = {2},
+  pages     = {192-200},
+  owner     = {Vincent},
+  timestamp = {2023.08.12},
+  url       = {https://www.jstor.org/stable/752035},
 }
 
 @Article{Majumder2017,
@@ -40831,6 +41028,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1038/nature03607},
   owner     = {Vincent},
   timestamp = {2010.06.03},
+}
+
+@Book{Palmer2004,
+  title     = {Fictional Minds},
+  publisher = {University of Nebraska Press},
+  year      = {2004},
+  author    = {Palmer, A.},
+  owner     = {Vincent},
+  timestamp = {2023.08.12},
+  url       = {https://books.google.fr/books?id=ZCHgz4345AEC},
 }
 
 @Article{Palmer2005,
@@ -48408,6 +48615,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/?id=8NQzQwAACAAJ},
 }
 
+@Article{Seymour1903,
+  author    = {Seymour, E. B.},
+  title     = {The Historical Development of the Common-Law Conception of a Corporation},
+  journal   = {American Law Register},
+  year      = {1903},
+  volume    = {51},
+  number    = {9},
+  pages     = {529},
+  doi       = {10.2307/3306413},
+  owner     = {Vincent},
+  timestamp = {2023.08.12},
+}
+
 @Article{Shafie2015,
   author    = {Shafie, T.},
   title     = {A multigraph approach to social network analysis},
@@ -52359,6 +52579,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2021.01.22},
   url       = {https://www.peterlang.com/view/title/72809},
+}
+
+@Book{Tesniere1959,
+  title     = {Élements de Syntaxe Structurale},
+  publisher = {C. Klincksieck},
+  year      = {1959},
+  author    = {Tesnière, L.},
+  owner     = {Vincent},
+  timestamp = {2023.08.12},
+  url       = {https://data.bnf.fr/12048639/lucien_tesniere_elements_de_syntaxe_structurale/fr.pdf},
 }
 
 @Article{Thelwall2016,
@@ -59653,6 +59883,32 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.4028/www.scientific.net/amm.740.947},
   owner     = {Vincent},
   timestamp = {2020.03.13},
+}
+
+@Article{Zunshine2003,
+  author    = {Zunshine, L.},
+  title     = {Theory of Mind and Experimental Representations of Fictional Consciousness},
+  journal   = {Narrative},
+  year      = {2003},
+  volume    = {11},
+  number    = {3},
+  pages     = {270-291},
+  owner     = {Vincent},
+  timestamp = {2023.08.12},
+  url       = {https://www.jstor.org/stable/20107319},
+}
+
+@Article{Zunshine2008,
+  author    = {Zunshine, L.},
+  title     = {Theory of Mind and Fictions of Embodied Transparency},
+  journal   = {Narrative},
+  year      = {2008},
+  volume    = {16},
+  number    = {1},
+  pages     = {65-92},
+  owner     = {Vincent},
+  timestamp = {2023.08.12},
+  url       = {https://www.jstor.org/stable/30219272},
 }
 
 @Article{Zupan2015,
