--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -37858,7 +37858,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @Article{Moretti2013,
   author    = {Moretti, F.},
-  title     = {"Operationalizing": Or, the Function of Measurement in Modern Literary Theory},
+  title     = {``Operationalizing'': Or, the Function of Measurement in Modern Literary Theory},
   journal   = {New Left Review},
   year      = {2013},
   volume    = {84},
